--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								<li>
 									<a href="#">
 										<img class="image" src="img/hero/parul.png" alt="" />
-										<span>Microsoft Power Bi</span>
+										<span>Microsoft Power BI</span>
 										<!-- <img class="svg" src="img/svg/right-arrow.svg" alt="" /> -->
 									</a>
 								</li>
